# MEEWI

./: .gitignore  LICENSE  app.py  duck.db  duckdbtest.py  meeuwi_app_2.py  mor_items.csv  openalex_data.parquet  pyproject.toml  testing.py
.github/: copilot-instructions.md
.github/openalex_data_load/: flatten-openalex-jsonl.py  instructions-openalex-data-ingestion.md  openalex-pg-schema.sql
data/: __init__.py  cerif.py  cerif_specification_shortened.json  constants.py  example_data.json  logging.py  shorten_cerif_specs.py
db/: base.py  duckdb.py
export/: __init__.py  example_cerif.xml  exporter.py
models/: schema.py  validate.py
open_alex_data/: __init__.py  main.py  testing.py
open_alex_data/api/: __init__.py  client.py
open_alex_data/ingestors/: __init__.py  authors.py  base.py  concepts.py  funders.py  institutions.py  publishers.py  sources.py  topics.py  works.py
open_alex_data/models/: __init__.py  enums.py
open_alex_data/parsers/: __init__.py  authors.py  base.py  concepts.py  funders.py  institutions.py  publishers.py  sources.py  topics.py  works.py
open_alex_data/schemas/: __init__.py  db_schema.py
openalex_schemas/: create_ddl.py  works.py
parse/: __init__.py  parser.py
retrieval/: __init__.py  base_classes.py
retrieval/openaire/: enrich.py  mappings.py  queries.py
retrieval/openaire/models/: __init__.py  community.py  project.py  (+4 more)
retrieval/openalex/: __init__.py  enrich.py  mappings.py  queries.py  utils.py
retrieval/pure/: mappings.py  queries.py
retrieve/: __init__.py  retriever.py
retrieve/connectors/: __init__.py  base.py
utils/: __init__.py  create_ddl.py  enums.py  validate.py
(+13 files in other folders)
